After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723826 - Properties header bar looks bad
Properties header bar looks bad
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: general
3.11.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
3.12
Depends on:
Blocks:
 
 
Reported: 2014-02-07 10:21 UTC by Allan Day
Modified: 2014-02-08 17:51 UTC
See Also:
GNOME target: ---
GNOME version: 3.11/3.12


Attachments
Remove the button "Close" from GtkHeaderBar (985 bytes, patch)
2014-02-08 17:16 UTC, Baptiste Mille-Mathias
committed Details | Review

Description Allan Day 2014-02-07 10:21:21 UTC
It has a text button with a "Close" label, and the "Properties" heading is misaligned. The close button should be like on other header bars - it should have an X.
Comment 1 Baptiste Mille-Mathias 2014-02-08 17:16:32 UTC
Created attachment 268511 [details] [review]
Remove the button "Close" from GtkHeaderBar
Comment 2 Bastien Nocera 2014-02-08 17:42:34 UTC
Review of attachment 268511 [details] [review]:

Looks good.