[properties] Remove the button "Close" from GtkHeaderBar

The better behavior is to have a [X] button.
https://bugzilla.gnome.org/show_bug.cgi?id=723826